# KJLua

./: NOTICE  readme.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: callObjMethod.lua  db.lua  permission.lua  sp.lua
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
lua_annotation/: build.gradle
lua_apt/: build.gradle
lua_java/: build.gradle  consumer-rules.pro
lua_java/src/main/: AndroidManifest.xml
lua_java/src/main/jni/: CMakeLists.txt
lua_java/src/main/jni/lua/: linit.c  lualib.h  test.c
lua_java/src/main/jni/luajava/: luajava.c  luajava.h
maven/com/xm/lua_annotation/lua_annotation/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/com/xm/lua_annotation/lua_annotation/1.0.0/: lua_annotation-1.0.0.jar.md5  lua_annotation-1.0.0.jar.sha1  lua_annotation-1.0.0.jar.sha256  lua_annotation-1.0.0.jar.sha512  lua_annotation-1.0.0.module  lua_annotation-1.0.0.module.md5  lua_annotation-1.0.0.module.sha1  lua_annotation-1.0.0.module.sha256  lua_annotation-1.0.0.pom  (+5 more)
maven/com/xm/lua_apt/lua_apt/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
maven/com/xm/luajava/lua_java/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
(+48 files in other folders)
